tests/syntax_tests/data/parsing/errors/expressions/taggedTemplateUnclosedInterpolation.res
let q = sql`SELECT * FROM ${table